--- a/CESM/F2000试验/NUG试验/1119.md
+++ b/CESM/F2000试验/NUG试验/1119.md
@@ -14,12 +14,10 @@
 2.  **强迫数据 (Nudging Data)**: NUG实验需要气象再分析数据（如MERRA2）。你的脚本里已经有雏形了，但被注释掉了。你需要确认服务器上 `/share/home/minghuai/Liuym/DATA/MERRA2/` 这个路径下是否有数据，以及 `filenames_list` 文件是否存在。
 3.  **路径规则**: 严格遵守师姐的指示，不改动 `yliang` 相关的路径。
 
-### 第二步：修改后的脚本 (`run_Lu2023_NUG.csh`)
-
-我基于你的 `F2000_default.csh` 进行了修改。你可以直接复制保存为新文件（例如 `run_NUG.csh`）。
+### 第二步：修改后的脚本 (`NUG_default.csh`)
 
 **主要修改点说明（看代码注释）：**
-1.  **CASE名字**: 改为了 `F2000_Lu2023_NUG`，方便区分。
+1.  **CASE名字**: 改为了 `F2000_1807_NUG`，方便区分。
 2.  **Nudging设置**: 在 `user_nl_cam` 中开启了 Nudging 开关，并且根据文章设置，**只同化 U 和 V（水平风场）**，松弛时间设置为 **6小时**。
 3.  **SourceMods链接**: 增加了一段代码，自动把你的源代码链接过去（如果你有的话）。
 
